
Release Notes
=============

trunk
-----

November 26, 2018, Juan Carlos Diaz Velez (juancarlos@icecube.wisc.edu)
--------------------------------------------------------
Release V18-11-00

* r163838 - Fixes bad test pattern.


June 13, 2018, Alex Olivas  (olivas@icecube.umd.edu)
--------------------------------------------------------
Release V18-06-00

* r161877 - Fix ExtrudedPolygon fatal error (#2143)
* r161772 - Remove flaringDOMFilter
* r161127 - Remove I3TRandomService
* r160150 - Add I3MT19937 RNG from modern C++
* r159940 - Fixed bug in ExtrudedPolygon::GetDistanceToHull


November 15, 2017, Alex Olivas  (olivas@icecube.umd.edu)
--------------------------------------------------------
Release V17-11-00

* r161127 - Remove unused random service `I3TRandomService`
* r158277 - Add flaring DOM filter module (jbraun)
* r159414, 159560 - Improved the goodrunlist script (joertlin)
* r159561 - Updated the GCD_inserter accordingly to the new goodrunlist interface (joertlin)

March 23, 2017, Alex Olivas  (olivas@icecube.umd.edu)
-----------------------------------------------------
Release V17-03-00

* r148815 - Splitters should set `sub_event_stream_name_` by hand.  This will allow us to stop using the I3Configuration instance name.
* r148776 - Empty streams are gone.
* r147881 - Exposing Cherenkov functions so that they can be used from python.

April 29, 2016, Alex Olivas  (olivas@icecube.umd.edu)
-----------------------------------------------------
Release V16-04-00

* r145068 - SPEFitInjector can now read compressed files.
* r143803 and r143909 - Support for scintillators.

March 18, 2016, don la dieu  (nega@icecube.umd.edu)
---------------------------------------------------
Release V16-03-00

* documentation udpates
* mainboard id updates
* Add goodrunlist interpretor script
  -- Marcel Zoll
* Add module for adding GCD-frames to the event stream on the fly according to goodrunlist
  -- Marcel Zoll

December 14, 2015, don la dieu  (nega@icecube.umd.edu)